--- a/frontend-apicrud/listado-pro.html
+++ b/frontend-apicrud/listado-pro.html
@@ -261,7 +261,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span id="nombre-usuario"  class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
                                 <img class="img-profile rounded-circle"
                                     src="img/undraw_profile.svg">
                             </a>
@@ -281,10 +281,10 @@
                                     Activity Log
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                <button type="button" id="btnLogout" class="dropdown-item" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Logout
-                                </a>
+                                </button>
                             </div>
                         </li>
 
@@ -312,9 +312,9 @@
                                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                               </svg>
                             </span>
-                            <input type="search" class="form-control hide-focus border-0" placeholder="Buscar Producto" aria-label="Username" aria-describedby="basic-addon1">
+                            <input id="search-input" type="search" class="form-control hide-focus border-0" placeholder="Buscar Producto" aria-label="Username" aria-describedby="basic-addon1">
                           </div> 
-                         <table class="table align-middle mb-0 bg-white">
+                         <table id="table-pro" class="table align-middle mb-0 bg-white">
                             <thead class="bg-light">
                               <tr>
                                 <th>#</th>
@@ -397,6 +397,8 @@
     <script src="js/demo/chart-area-demo.js"></script>
     <script src="js/demo/chart-pie-demo.js"></script>
 
+    <!-- archivo listado  productos -->
+    <script src="js/listado-pro.js"></script>
 </body>
 
 </html>
