--- a/frontend-apicrud/crear-pro.html
+++ b/frontend-apicrud/crear-pro.html
@@ -28,14 +28,14 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+        <ul class="navbar-nav bg-gradient-warning sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                    <i class="fas ">🍔</i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Inventario</div>
+                <div class="sidebar-brand-text mx-3">Rock & Burgers</div>
             </a>
 
             <!-- Divider -->
