--- a/frontend-apicrud/indexhamburguer.html
+++ b/frontend-apicrud/indexhamburguer.html
@@ -21,7 +21,7 @@
   <!-- home section -->
   <nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container-fluid">
-      <a class="navbar-brand" href="indexhamburguer.html" id="logo"><img src="./images/logo.png" alt="" width="30px">BUR<span>GER</span></a>
+      <a class="navbar-brand" href="indexhamburguer.html" id="logo"><img src="./images/logo.png" alt="" width="30px">Rock & <span>Burgers</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span><i class="fa-solid fa-bars"></i></span>
       </button>
@@ -31,13 +31,13 @@
             <a class="nav-link active" aria-current="page" href="#" id="first-child">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="index.html#burger">Burger</a>
+            <a class="nav-link" href="index.html#burger">Rock & Burgers</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Other
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #ffc800;">
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color:#ff8a00;">
               <li><a class="dropdown-item" href="index.html#top-icons">Pizza</a></li>
               <li><a class="dropdown-item" href="index.html#top-icons">Fries</a></li>
               <li><a class="dropdown-item" href="index.html#top-icons">Fried Chicken</a></li>
@@ -90,13 +90,13 @@
     <section class="home">
       <div class="content">
         <h1>Super Delicious
-          <br> <span>Burger</span>
+          <br> <span>Rock & Burgers</span>
         </h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, iste!</p>
         <div id="btn"><button>Order Now</button> <span>$100.50</span></div>
       </div>
       <div class="img">
-        <img src="./images/burger.png" alt="">
+        <img src="./img/burguer.png" alt="">
       </div>
     </section>
     <!-- home content -->
@@ -451,7 +451,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6 footer-contact">
-            <a class="navbar-brand" href="#" id="logo2"><img src="./images/logo.png" alt="" width="30px">Burger</a>
+            <a class="navbar-brand" href="#" id="logo2"><img src="./images/logo.png" alt="" width="30px">Rock & Burgers</a>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, libero.</p><br>
             <p>
               Karachi <br><br>
@@ -501,7 +501,7 @@
   <hr>
   <div class="container py-4">
     <div class="copyright">
-      &copy; Copyright <strong>Burger</strong>.All Rights reserved
+      &copy; Copyright <strong>Rock & Burgers</strong>.All Rights reserved
     </div>
     <div class="credits">
       Designed By <a href="#">SA coding</a>
